--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "react": "http://petehunt.net/react/react-0.5.1.tar.gz"
   },
   "devDependencies": {
-    "react-tools": "~0.5.1"
+    "jsxc": "~0.1.5"
   },
   "scripts": {
-    "start": "jsx --watch src/ lib/",
-    "build": "jsx src/ lib/"
+    "start": "jsxc --watch src/ lib/",
+    "build": "jsxc src/ lib/"
   },
   "author": "Pete Hunt",
   "license": "Apache 2"
